--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,141 @@
 ---
-
+import Layout from "../layouts/Layout.astro";
+import Project from "../components/Project.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout>
+  <section class="flex items-center justify-center pt-36 flex-col">
+    <h1
+      class="text-4xl font-bold from-ctp-blue via-ctp-teal to-ctp-peach bg-linear-to-r w-fit bg-clip-text text-transparent leading-loose drop-shadow-2xl sm:text-5xl text-center"
+    >
+      Marcel Malych
+    </h1>
+    <div
+      class="[&>div]:flex [&>div]:items-center [&>div]:gap-1 [&>div]:transition-colors grid grid-cols-1 gap-y-5 place-items-center mt-12 sm:grid-cols-3"
+    >
+      <div class="hover:text-ctp-blue">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          ><!-- Icon from Material Design Icons by Pictogrammers - https://github.com/Templarian/MaterialDesign/blob/master/LICENSE -->
+          <path
+            fill="currentColor"
+            d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"
+          ></path></svg
+        >
+        <a href="https://www.linkedin.com/in/marcel-malych/">Marcel Malych</a>
+      </div>
+      <div class="hover:text-ctp-teal">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          ><!-- Icon from Material Design Icons by Pictogrammers - https://github.com/Templarian/MaterialDesign/blob/master/LICENSE -->
+          <path
+            fill="currentColor"
+            d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"
+          ></path></svg
+        >
+
+        <a href="https://github.com/marrsel">marrsel</a>
+      </div>
+      <div class="hover:text-ctp-peach">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          ><!-- Icon from Material Design Icons by Pictogrammers - https://github.com/Templarian/MaterialDesign/blob/master/LICENSE -->
+          <path
+            fill="currentColor"
+            d="m20 8l-8 5l-8-5V6l8 5l8-5m0-2H4c-1.11 0-2 .89-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2"
+          ></path></svg
+        >
+        <a href="mailto:marcel@gamastudio.sk">marcel@gamastudio.sk</a>
+      </div>
+    </div>
+    <p class="text-center max-w-2xl mt-18 max-md:px-3">
+      I’m interested in IT and technology in general. I have experience working
+      on my own projects, solving technical problems, and learning new systems
+      and tools. I’m currently looking for an opportunity in IT where I can grow
+      and gain hands-on experience.
+    </p>
+  </section>
+  <section class="flex items-center justify-center pt-36 flex-col">
+    <h2
+      class="text-3xl text-center font-bold from-ctp-green to-ctp-teal bg-linear-to-r w-fit bg-clip-text text-transparent leading-loose drop-shadow-2xl"
+    >
+      Projects
+    </h2>
+    <p class="text-center max-w-2xl mt-4 max-md:px-3">
+      Some projects I’ve worked on from idea and implementation to deployment.<br
+        class="max-sm:hidden"
+      /> I focused on functionality, structure, and practical problem-solving.
+    </p>
+    <div
+      class="grid grid-cols-1 gap-x-8 gap-y-12 container mt-16 mb-36 px-3 sm:grid-cols-2 lg:grid-cols-3"
+    >
+      <Project
+        name="loftsport.sk"
+        url="https://loftsport.sk/"
+        src="/loftsport.webp"
+        alt="Loft sport center"
+        loading="eager"
+      />
+      <Project
+        name="e-real.sk"
+        url="https://www.e-real.sk/"
+        src="/e-real.webp"
+        alt="E-real"
+        loading="eager"
+      />
+      <Project
+        name="penzionstaraskola.eu"
+        url="https://penzionstaraskola.eu/"
+        src="/penzionstaraskola.webp"
+        alt="Penzion stará škola"
+        loading="eager"
+      />
+      <Project
+        name="fincross.sk"
+        url="https://fincross.sk/"
+        src="/fincross.webp"
+        alt="Fincross"
+      />
+      <Project
+        name="finreal.eu"
+        url="https://finreal.eu/"
+        src="/finreal.webp"
+        alt="Finreal"
+      />
+      <Project
+        name="zubajdusan.sk"
+        url="https://zubajdusan.sk/"
+        src="/zubajdusan.webp"
+        alt="Dušan Zubaj"
+      />
+      <Project
+        name="gamastudio.sk"
+        url="https://gamastudio.sk/"
+        src="/gamastudio.webp"
+        alt="Gama Studio"
+      />
+      <Project
+        name="dukatrade.sk"
+        url="https://dukatrade.sk/"
+        src="/dukatrade.webp"
+        alt="Dukatrade"
+      />
+      <Project
+        name="exclusivesolutions.sk"
+        url="https://exclusivesolutions.sk/"
+        src="/exclusivesolutions.webp"
+        alt="EXCLUSIVE Solutions "
+      />
+    </div>
+  </section>
+  <footer class="text-center py-4">© 2026 Marcel Malych</footer>
+</Layout>
